2008-09-24 Holger Vogt
 * wstdio.h, scalb.c, complex.h
   Small changes to allow compilation with MS Visual C++ 2008
   main.c, util.c: path of *.cir input file as search path for .include files (Windows only)

2008-09-22 Holger Vogt
 * complex.h, measure.c, resource.c, windisp.c, xpressn.c, rawfile.c, runcoms.c, readhelp.c,
   defines.h, ngspice.h, b4soild.c, hsm1eval102.c, hsm1eval112.c, hsm1eval120.c, wstdio.h
   Small changes to allow compilation with MS Visual C++ 2008

2008-09-15 Lionel Sainte Cluque
  * src/Makefile.am: Add $(DESTDIR) in tclspice installation, required by debian package.
  * src/Makefile.am: Use -no-undefined only for windows build (libspice_la_LDFLAGS)

2008-09-13 Holger Vogt
 * configure.in: add AC_LIBTOOL_WIN32_DLL
 * src/makefile.am correct typo

2008-09-13 Holger Vogt
 * configure.in: add /mingw as search path for tcl
 * tclspice.c: replace sigsetjump and sigjmp_buf with macros from macros.h
 
2008-09-09 Lionel Sainte Cluque
 * configure.in: tclspice checks moved before Operating System checks: To set
 no_x flag before it is used.
 * tests/tcl-testbench*: chmod a+x tcl-testbench*.tcl

2008-09-01
 * configure.in: CAPZEROBYPASS is enabled by default now. To disable it you
   can add --disable-capzerobypass to configure command.  

2008-08-27 Paolo Nenzi
 * --- TCLSPICE initial integration (Lionel Sainte Cluque) ---
 * Makefile.am: Makefiles changed for libtool. We use still .a files but we let
   libtool to create them in a portable manner. This slows compilation a little
   bit but improves portability of ngspice/tclspice.
 * src/tclspice.c, src/tclspice.map, pkgIndex.tcl.in, src/include/tclspice.h: 
   tclspice main and include file. (Readded files).
 * src/tests/tcl/, src/tests/tcl-testbench1/, src/tests/tcl-testbench2/, 
   src/tests/tcl-testbench3/, src/tests/tcl-testbench4/: testbenches for 
   the tclspice simulator. (New dirs).
 * src/frontend/plotit.c: added blt_plot for blt output device if TCL defined.